--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "@kenjiuno/decompressrtf": "^0.1.3",
-    "iconv-lite": "^0.6.3"
+    "@kenjiuno/decompressrtf": "^0.1.3"
   },
   "engines": {
     "node": ">= 10"
